CFNKittensHTML.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: |
  
Parameters:
  imageID:
    Description: Id of my Amz Linux image
    Type: AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>
    Default: '/aws/service/ami-amazon-linux-latest/al2023-ami-kernel-6.1-x86_64'

MyKeypair:
  Description: My key in AWS
  Type: AWS::EC2::KeyPair::KeyName
  Default: devopswizard
  
InstanceType:
  Description: Choose your instnce type
  Type: String
  Default: t2.micro
  AllowedValues:
    - t2.micro
    - t3.micro
    - t2.large

Resources:
  MyEc2Instance:
    Type: !Ref InstanceType
    Properties:
      KeyName: !Ref KeyName
      SecurityGroups:
        - !Ref Ec2SecurityGroup
      UserData:
        Fn::Base64: |
          #! /bin/bash
          dnf update -y
          dnf install httpd -y 
          dnf install git -y 
          systemctl start httpd
          systemctl enable httpd
          cd /var/www/html
          git clone https://github.com/devopswizard/kittens-carousel-plain-html.git
          mv kittens-carousel-plain-html/static-web/* .
          rm -rf kittens-carousel-plain-html
      InstanceType: !Ref InstanceType
      ImageId: !Ref imageID
      Tags:
        - Key: Name
          Value: !Sub {AWS::StackName}

  Ec2SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable SSH + HTTP ports
      GroupName: security-group-kittens-carousel
      SecurityGroupIngress: 
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0

Outputs:
  myWebsiteURL:
    Description: URL of my website
    Value: !Sub
      - http://${PublicDNS}
      - PublicDNS: !GetAtt MyEc2Instance.PublicDnsName
